--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "axios": "^0.21.1",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
